--- a/.github/workflows/mains.yml
+++ b/.github/workflows/mains.yml
@@ -1,7 +1,8 @@
 on:
   schedule:
-  - cron: 59 2 * * *
-name: Update
+  - cron: 0 6 * * 1
+  workflow_dispatch:
+name: Update Dependencies
 jobs:
   package-update:
     runs-on: ubuntu-latest
@@ -16,6 +17,8 @@ jobs:
         AUTHOR_NAME: Loopito
         EXECUTE: "true"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        COMMIT_MESSAGE: Update Dependencies
         LOG_LEVEL: debug
+        UPDATE_COMMAND: yarn
       with:
-        args: -u --packageFile package.json --loglevel verbose
+        args: upgrade --latest
