--- a/.github/workflows/mains.yml
+++ b/.github/workflows/mains.yml
@@ -15,7 +15,7 @@ jobs:
       with:
         repository: elestu/actions-dependacop
         ref: v0.0.1
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.GitHub_PAT }}
         path: .github/actions/my-action
     - name: Run My Action
       uses: ./.github/actions/actions-dependacop
