--- a/.github/workflows/mains.yml
+++ b/.github/workflows/mains.yml
@@ -28,4 +28,4 @@ jobs:
         LOG_LEVEL: debug
         UPDATE_COMMAND: yarn
       with:
-        args: upgrade --latest
+        args: upgrade --latest --prod
