--- a/.github/workflows/mains.yml
+++ b/.github/workflows/mains.yml
@@ -26,6 +26,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         COMMIT_MESSAGE: Update Dependencies
         LOG_LEVEL: debug
-        UPDATE_COMMAND: yarn
+        #UPDATE_COMMAND: yarn
       with:
-        args: upgrade --latest --prod
+        args: -u --packageFile package.json --dep prod 
+        #args: upgrade --latest --prod
