--- a/.github/workflows/mains.yml
+++ b/.github/workflows/mains.yml
@@ -10,15 +10,8 @@ jobs:
     - uses: actions/checkout@master
     - name: set remote url
       run: git remote set-url --push origin https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-    - name: Checkout GitHub Action Repo
-      uses: actions/checkout@v2
-      with:
-        repository: elestu/actions-dependacop
-        ref: v0.0.1
-        token: ${{ secrets.PRIVATE_REPO_ACCESS_TOKEN }}
-        path: .github/actions/actions-dependacop
-    - name: Run My Action
-      uses: ./.github/actions/actions-dependacop
+    - name: Dependacop
+      uses: elestu/actions-dependacop@v1.0.0
       env:
         AUTHOR_EMAIL: hello@loopstudio.dev
         AUTHOR_NAME: Loopito
