--- a/.github/workflows/mains.yml
+++ b/.github/workflows/mains.yml
@@ -11,7 +11,7 @@ jobs:
     - name: set remote url
       run: git remote set-url --push origin https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
     - name: Dependacop
-      uses: elestu/actions-dependacop@master
+      uses: elestu/actions-dependacop@test
       env:
         AUTHOR_EMAIL: hello@loopstudio.dev
         AUTHOR_NAME: Loopito
