--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "react": "*",
     "react-dom": "*"
   },
-  "dependencies": {},
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
     "@babel/cli": "7.11.6",
     "@babel/core": "7.11.6",
     "@babel/node": "7.10.5",
